--- a/Backend/package.json
+++ b/Backend/package.json
@@ -30,6 +30,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@pdf-lib/fontkit": "^1.1.1",
     "@types/multer": "^1.4.12",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
@@ -41,6 +42,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "fontkit": "^2.0.4",
     "joi": "^17.13.3",
     "mssql": "^10.0.4",
     "mysql2": "^3.11.0",
@@ -61,6 +63,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
+    "@types/fontkit": "^2.0.7",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
